   the same name to fail (eg. alias `name` in a join statement where multiple
   tables have the real column `name`). Statements with aliases that shadowed
   a real column and also retrieve that real column will no longer fail as the
   real column will be used in the `GROUP BY` clause (this will not be
   ambigous anymore).

Changes
=======

 - Made the help messages of ``bin/crate`` and the Java code consistent. This
   change also removes the undocumented ``-E`` command line option which makes
   ``-C`` the only valid option for passing settings to CrateDB.

 - Changed the Enterprise License missing check message, as well as lowering
   the severity from HIGH to LOW.

 - Added a warning message to the log if the Unofficial Elasticsearch HTTP
   REST API is enabled via ``es.api.enabled`` setting.

  - Updated Elasticsearch to v5.4.3.

 - Enabled ``mapping.total_fields.limit`` setting for tables in order to be
   able to increase maximum number of columns higher than the default of
   ``1000``.

 - Table functions now support value expressions as arguments.

Fixes
=====

 - Fixed an issue that prevented CrateDB from starting when ``path.home`` was
   set via command line argument.

 - Fixed an issue causing ``JOINs`` on virtual tables (sub-selects) which
   contain ``LIMIT`` and/or ``OFFSET`` to return incorrect results.
   E.g.::

      SELECT * FROM
        (SELECT * FROM t1 ORDER BY a LIMIT 5) t1,
      JOIN
        (SELECT * FROM t2 ORDER BY b OFFSET 2) t2
      ON t1.a = t2.max

 - Fixed an issue causing ``JOINs`` with aggregations on virtual tables
   (sub-selects) which also contain aggregations to return incorrect results.
   E.g.::

     SELECT t1.a, COUNT(*) FROM t1
     JOIN (SELECT b, max(i) as max FROM t2 GROUP BY b) t2
     ON t1.a = t2.max
     GROUP BY t1.id

 - Fixed the error message to be more descriptive when the condition in a
   `CASE/WHEN` expression is not a boolean.

 - Fixed an issue which caused an exception if ``EXPLAIN`` is used on a